@@ -1,3 +1,11 @@
+Wed Feb 23 10:24:02 UTC 2011  Vladimir Zykov  <vladimir.zykov@prismtech.com>
+
+        * ace/Connector.cpp:
+          Changed initialization of ACE_Strategy_Connector so that its
+          CREATION_STRATEGY and its base class ACE_Connector use reactor
+          provided by user instead of the default one returned by
+          ACE_Reactor::instance().
+
 Wed Feb 23 10:23:36 UTC 2011  Olli Savia  <ops@iki.fi>
 
         * include/makeinclude/platform_lynxos.GNU:
